# ToyEngine

./: .gitignore  1.txt  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  ToyEngine.cpp  ToyEngine.h  compile_shaders.bat
Source/: CMakeLists.txt
Source/Editor/: README.md
Source/Launch/: CMakeLists.txt
Source/Launch/Private/: ToyEngine.cpp
Source/Launch/Public/: ToyEngine.h
Source/Main/Private/: Main.cpp
Source/Runtime/: CMakeLists.txt
Source/Runtime/Asset/: CMakeLists.txt  README.md
Source/Runtime/Asset/Private/: AssetImporter.cpp  AssetLoader.cpp  AssetManager.cpp  FAssetImporter.cpp  Mesh.cpp  StaticMesh.cpp  TStaticMesh.cpp  Texture2D.cpp
Source/Runtime/Asset/Public/: AssetImporter.h  AssetLoader.h  AssetManager.h  Material.h  Mesh.cpp  Mesh.h  StaticMesh.h  TStaticMesh.h  Texture2D.h
Source/Runtime/Core/: CMakeLists.txt  README.md
Source/Runtime/Core/Private/: Log.cpp  TELog.cpp
Source/Runtime/Core/Public/: TELog.h
Source/Runtime/Core/TELog/: CMakeLists.txt
Source/Runtime/Engine/: CMakeLists.txt
Source/Runtime/Engine/Private/: Engine.cpp  RHIDeviceFactory.cpp
Source/Runtime/Engine/Public/: Engine.h
Source/Runtime/Input/: CMakeLists.txt  README.md
Source/Runtime/Input/Private/: InputManager.cpp  InputSystem.cpp
Source/Runtime/Input/Public/: InputKeys.h  InputManager.h  InputSystem.h
Source/Runtime/OpenGLRHI/: CMakeLists.txt
Source/Runtime/OpenGLRHI/Private/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLCommandBuffer.cpp  OpenGLCommandBuffer.h  OpenGLDevice.cpp  OpenGLDevice.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLRHIEntry.cpp  OpenGLShader.cpp  OpenGLShader.h
Source/Runtime/OpenGLRHI/Public/: OpenGLRHIEntry.h
Source/Runtime/Platform/: CMakeLists.txt  README.md
Source/Runtime/Platform/Private/: PlatformFactory.cpp  TEGLFWWindow.cpp  TEGraphicContext.cpp  TESwapChain.cpp  TEVKFrameBuffer.cpp  TEVKGraphicContext.cpp  TEVKImageView.cpp  TEVKLogicDevice.cpp  TEVKQueue.cpp  TEVKRenderPass.cpp  TEVKSwapChain.cpp  TEWindow.cpp
Source/Runtime/Platform/Public/: TEGLFWWindow.h  TEGraphicContext.h  TESwapChain.h  TEVKCommon.h  TEVKFrameBuffer.h  TEVKGraphicContext.h  TEVKImageView.h  TEVKLogicDevice.h  TEVKQueue.h  TEVKRenderPass.h  TEVKSwapChain.h  Window.h
Source/Runtime/Platform/Window/: CMakeLists.txt
Source/Runtime/RHI/: CMakeLists.txt  README.md
Source/Runtime/RHI/Private/: RHIDevice.cpp  RHIFactory.cpp  RHITransientAllocator.cpp  TEGraphicContext.cpp
Source/Runtime/RHI/Public/: RHI.h  RHIBindGroup.h  RHIBuffer.h  RHICommandBuffer.h  RHIDevice.h  RHIPipeline.h  RHIRenderTarget.h  RHISampler.h  RHIShader.h  RHITexture.h  RHITransientAllocator.h  RHITypes.h  TEFileUtil.h  TEGraphicContext.h  TEVKCommon.h
Source/Runtime/RHIOpenGL/: CMakeLists.txt
Source/Runtime/RHIOpenGL/Private/: OpenGLBindGroup.cpp  OpenGLBindGroup.h  OpenGLBindGroupLayout.cpp  OpenGLBindGroupLayout.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLCommandBuffer.cpp  OpenGLCommandBuffer.h  OpenGLDevice.cpp  OpenGLDevice.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLPipelineLayout.cpp  OpenGLPipelineLayout.h  OpenGLRenderTarget.cpp  OpenGLRenderTarget.h  OpenGLSampler.cpp  OpenGLSampler.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderLibrary.cpp  OpenGLShaderLibrary.h  OpenGLTexture.cpp  OpenGLTexture.h  RHIOpenGLEntry.cpp
Source/Runtime/RHIOpenGL/Public/: RHIOpenGLEntry.h
Source/Runtime/RHIVulkan/: CMakeLists.txt
Source/Runtime/RHIVulkan/Private/: RHIVulkanEntry.cpp  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanConversions.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSampler.cpp  VulkanSampler.h  VulkanShader.cpp  VulkanShader.h  VulkanTexture.cpp  VulkanTexture.h
Source/Runtime/RHIVulkan/Public/: RHIVulkanEntry.h
Source/Runtime/RenderCore/: CMakeLists.txt
Source/Runtime/RenderCore/Private/: FStaticMeshRenderData.cpp  FStaticMeshSceneProxy.cpp  StaticMeshRenderData.cpp  StaticMeshSceneProxy.cpp
Source/Runtime/RenderCore/Public/: FMeshDrawCommand.h  FPrimitiveSceneProxy.h  FStaticMeshSceneProxy.h  LightComponentId.h  LightSceneProxy.h  MeshDrawCommand.h  PrimitiveComponentId.h  PrimitiveSceneInfo.h  PrimitiveSceneProxy.h  StaticMeshRenderData.h  StaticMeshSceneProxy.h
Source/Runtime/Renderer/: CMakeLists.txt  README.md
Source/Runtime/Renderer/Private/: Camera.cpp  DeferredRenderPath.cpp  FScene.cpp  FStaticMeshRenderData.cpp  FStaticMeshSceneProxy.cpp  ForwardRenderPath.cpp  MeshPassProcessor.cpp  RenderResourceManager.cpp  RenderSceneBridge.cpp  Renderer.cpp  RendererBindingSlots.h  RendererDepthConvention.h  RendererLightUniforms.cpp  RendererLightUniforms.h  RendererPassUniforms.cpp  RendererPassUniforms.h  RendererScene.cpp  RendererShaderNames.h  RendererTextureBindings.cpp  RendererTextureBindings.h  RendererTransientUniforms.cpp  RendererTransientUniforms.h  SceneRenderer.cpp  StaticMeshValidationRenderPath.cpp  StaticMeshValidationRenderPath.h  VulkanRenderer.cpp
Source/Runtime/Renderer/Public/: Camera.h  DeferredRenderPath.h  FMeshDrawCommand.h  FPrimitiveSceneProxy.h  FScene.h  FStaticMeshRenderData.h  FStaticMeshSceneProxy.h  FViewInfo.h  ForwardRenderPath.h  IRenderPath.h  MeshPassProcessor.h  RenderPathTypes.h  RenderResourceManager.h  RenderSceneBridgeFactory.h  RenderStats.h  Renderer.h  RendererScene.h  SceneRenderer.h
Source/Runtime/Scene/: CMakeLists.txt  README.md
Source/Runtime/Scene/Private/: Actor.cpp  CameraComponent.cpp  FlyCameraController.cpp  MeshComponent.cpp  PrimitiveComponent.cpp  World.cpp
Source/Runtime/Scene/Public/: Actor.h  CameraComponent.h  MeshComponent.h  PrimitiveComponent.h  RenderScene.h  RenderSceneBridge.h  SceneComponent.h  World.h
Source/Runtime/World/: CMakeLists.txt
Source/Runtime/World/Private/: Actor.cpp  CameraComponent.cpp  FlyCameraController.cpp  LightComponent.cpp  MeshComponent.cpp  World.cpp  (+2 more)
Source/Sandbox/: CMakeLists.txt  Main.cpp  README.md  RENDERING_TEST.md
Tests/: CMakeLists.txt  MathTest.cpp  RHITransientAllocatorTest.cpp  SimpleTest.cpp
(+224 files in other folders)
